Hatodik feladat elvégzése

--- a/balatongyorok.html
+++ b/balatongyorok.html
@@ -20,7 +20,7 @@
     Forrás: hazaielmenyek.hu
     http://hazaielmenyek.hu/latnivalo/balatongyorok/batsanyi-kilato-i11024
     <h2>Bél Mátyás kilátó </h2>
-    A Garga-hegy tetején található kilátó 1972-ben épült, a keszthelyi erdészet építette. A kilátó kitűnő panorámát nyújt a Tapolcai-medence tanúhegyeire. Ugyancsak kiváló a kilátás a Keszthelyi hegység dimbes-dombos hegyvonulataira, a somogyi partokra, a keszthelyi öbölre. A Keszthelyi-hegység fái között található kilátó környékén egyedi növény-és állatvilág található. 
+<p>    A Garga-hegy tetején található kilátó 1972-ben épült, a keszthelyi erdészet építette. A kilátó kitűnő panorámát nyújt a Tapolcai-medence tanúhegyeire. Ugyancsak kiváló a kilátás a Keszthelyi hegység dimbes-dombos hegyvonulataira, a somogyi partokra, a keszthelyi öbölre. A Keszthelyi-hegység fái között található kilátó környékén egyedi növény-és állatvilág található.</p> 
     Szélesség	N 46.76855°
     Hosszúság	E 17.35227°
     Magasság	221 m
